--- a/build.gradle
+++ b/build.gradle
@@ -22,13 +22,15 @@ allure {
 
 dependencies {
 
-    testImplementation "io.qameta.allure:allure-java-commons:2.13.8"
+    implementation "io.qameta.allure:allure-java-commons:2.13.8"
     testImplementation 'org.hamcrest:hamcrest-all:1.3'
-
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
 //    implementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.0'
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.0"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.7.0"
+    // https://mvnrepository.com/artifact/io.rest-assured/rest-assured
+    implementation group: 'io.rest-assured', name: 'rest-assured', version: '4.3.3'
+
 }
 
 test {
