--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ plugins {
 
 group 'org.example'
 version '1.0-SNAPSHOT'
+sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
@@ -22,14 +23,17 @@ allure {
 
 dependencies {
 
-    testImplementation "io.qameta.allure:allure-java-commons:2.13.8"
-    testImplementation 'org.hamcrest:hamcrest-all:1.3'
+    implementation "io.qameta.allure:allure-java-commons:2.13.8"
+    implementation 'org.hamcrest:hamcrest-all:1.3'
 
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
 //    implementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.0'
-    testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.0"
+    implementation "org.junit.jupiter:junit-jupiter-api:5.7.0"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.7.0"
+    testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '4.3.3'
+
 }
+
 
 test {
     useJUnitPlatform()
@@ -48,5 +52,4 @@ task negative_test(type: Test) {
     useJUnitPlatform {
         includeTags 'negative'
     }
-
 }
