--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ allure {
 
 dependencies {
 
-    testImplementation "io.qameta.allure:allure-java-commons:2.13.8"
+    implementation "io.qameta.allure:allure-java-commons:2.13.8"
     testImplementation 'org.hamcrest:hamcrest-all:1.3'
 
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
